Changed the logout and view reservation functions in manager dashboard

--- a/app/front/manager/revised_dashboard_overview.html
+++ b/app/front/manager/revised_dashboard_overview.html
@@ -54,7 +54,7 @@ font-variation-settings: 'FILL' 1
       <span class="material-symbols-outlined">settings</span>
       <p class="text-sm font-medium leading-normal">Settings</p>
     </a>
-    <a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors" href="#" data-not-implemented>
+    <a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors" href="/logout">
       <span class="material-symbols-outlined">logout</span>
       <p class="text-sm font-medium leading-normal">Log Out</p>
     </a>
@@ -98,9 +98,9 @@ font-variation-settings: 'FILL' 1
 <p class="text-text-light dark:text-text-dark text-base font-bold">Mozzarella stock low</p>
 <p class="text-text-muted-light dark:text-text-muted-dark text-sm">Timestamp: 5 minutes ago</p>
 </div>
-<button class="flex w-full sm:w-fit min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-md h-9 px-4 bg-primary text-background-dark text-sm font-bold shadow-sm hover:opacity-90 transition-opacity" data-not-implemented>
+<a href="/manager/inventory" class="flex w-full sm:w-fit min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-md h-9 px-4 bg-primary text-background-dark text-sm font-bold shadow-sm hover:opacity-90 transition-opacity">
 <span>View Inventory</span>
-</button>
+</a>
 </div>
 </div>
 <div class="flex items-center gap-4 rounded-xl bg-status-orange/10 dark:bg-status-orange/20 p-4 border border-status-orange/50">
@@ -112,9 +112,9 @@ font-variation-settings: 'FILL' 1
 <p class="text-text-light dark:text-text-dark text-base font-bold">Large party (12 guests) arriving in 15 mins</p>
 <p class="text-text-muted-light dark:text-text-muted-dark text-sm">Reservation: Smith Party</p>
 </div>
-<button class="flex w-full sm:w-fit min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-md h-9 px-4 bg-surface-light dark:bg-surface-dark text-text-light dark:text-text-dark text-sm font-medium hover:bg-gray-200 dark:hover:bg-gray-600 transition-colors" data-not-implemented>
+<a href="/manager/manage_reservations" class="flex w-full sm:w-fit min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-md h-9 px-4 bg-primary text-background-dark text-sm font-bold shadow-sm hover:opacity-90 transition-opacity">
 <span>View Reservation</span>
-</button>
+</a>
 </div>
 </div>
 </div>
