Changed logout button for manager to be able to logout

--- a/app/front/manager/pending_reservation_screen.html
+++ b/app/front/manager/pending_reservation_screen.html
@@ -96,7 +96,7 @@
           <p class="text-sm font-medium">Help</p>
         </a>
         <a class="flex items-center gap-3 rounded-lg px-3 py-2 text-[#1c180d] dark:text-gray-300 hover:bg-primary/20 dark:hover:bg-primary/30"
-          href="#">
+          href="../logout">
           <span class="material-symbols-outlined">logout</span>
           <p class="text-sm font-medium">Logout</p>
         </a>
