--- a/app/front/manager/revised_dashboard_overview.html
+++ b/app/front/manager/revised_dashboard_overview.html
@@ -89,7 +89,7 @@
           <a class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark hover:text-primary transition-colors"
             href="#" data-not-implemented>Settings</a>
           <a class="text-sm font-medium text-text-muted-light dark:text-text-muted-dark hover:text-primary transition-colors"
-            href="#" data-not-implemented>Logout</a>
+            href="../logout">Logout</a>
         </nav>
         <div class="flex items-center gap-4">
           <button
