--- a/app/front/manager/sales_reports_page.html
+++ b/app/front/manager/sales_reports_page.html
@@ -65,7 +65,7 @@
           <p class="text-sm font-medium leading-normal">Settings</p>
         </a>
         <a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors"
-          href="#" data-not-implemented>
+          href="../logout">
           <span class="material-symbols-outlined">logout</span>
           <p class="text-sm font-medium leading-normal">Log Out</p>
         </a>
