--- a/app/front/customer/reservation_confirmation.html
+++ b/app/front/customer/reservation_confirmation.html
@@ -412,7 +412,7 @@
           const target = e.target.closest('[data-not-implemented]');
           if (target) {
             e.preventDefault();
-            showNotImplemented();
+            showModal();
           }
         });
       })();
