--- a/app/front/customer/delivery_order_confirmation.html
+++ b/app/front/customer/delivery_order_confirmation.html
@@ -371,7 +371,7 @@
         const target = e.target.closest('[data-not-implemented]');
         if (target) {
           e.preventDefault();
-          showNotImplemented();
+          showModal();
         }
       });
     })();
