--- a/app/front/customer/reservation_details_selection.html
+++ b/app/front/customer/reservation_details_selection.html
@@ -639,7 +639,7 @@
         const target = e.target.closest('[data-not-implemented]');
         if (target) {
           e.preventDefault();
-          showNotImplemented();
+          showModal();
         }
       });
     })();
