--- a/app/front/customer/delivery_order_confirmation.html
+++ b/app/front/customer/delivery_order_confirmation.html
@@ -137,7 +137,8 @@
                 <span class="material-symbols-outlined text-3xl">receipt_long</span>
               </div>
               <p class="text-[#1c180d] dark:text-white text-base font-normal leading-normal flex-1 truncate">Status:
-                <span class="font-bold text-green-600 dark:text-green-400">Confirmed</span></p>
+                <span class="font-bold text-green-600 dark:text-green-400">Confirmed</span>
+              </p>
             </div>
           </div>
           <div class="flex flex-col">
@@ -155,7 +156,8 @@
                 <div class="flex justify-between"><span>Soda (x1)</span><span>$3.00</span></div>
                 <div
                   class="flex justify-between font-bold text-[#1c180d] dark:text-white pt-2 border-t border-dashed border-gray-300 dark:border-zinc-700">
-                  <span>Total</span><span>$30.00</span></div>
+                  <span>Total</span><span>$30.00</span>
+                </div>
               </div>
             </details>
           </div>
