translated pop up to english

--- a/app/front/customer/delivery_details_&_payment_2.html
+++ b/app/front/customer/delivery_details_&_payment_2.html
@@ -491,7 +491,7 @@
           title.style.marginBottom = '12px';
 
           const text = document.createElement('p');
-          text.textContent = 'Esta funcionalidad aún no está implementada.';
+          text.textContent = 'This functionality is not implemented yet.';
           text.style.marginBottom = '20px';
 
           const btn = document.createElement('button');
