--- a/app/front/manager/edit_reservation_details.html
+++ b/app/front/manager/edit_reservation_details.html
@@ -236,7 +236,7 @@
 
             const modal = document.createElement('div');
             modal.className = '__notimpl_modal';
-            modal.innerHTML = '<h2>Not implemented yet!</h2><p>Esta funcionalidad aún no está implementada.</p>';
+            modal.innerHTML = '<h2>Not implemented yet!</h2><p>This functionality is not implemented yet.</p>';
 
             const closeBtn = document.createElement('button');
             closeBtn.textContent = 'Cerrar';
