--- a/app/front/manager/revised_dashboard_overview.html
+++ b/app/front/manager/revised_dashboard_overview.html
@@ -287,7 +287,7 @@
         backdrop.className = '__notimpl_modal_backdrop';
         const modal = document.createElement('div');
         modal.className = '__notimpl_modal';
-        modal.innerHTML = '<h2>Not implemented yet!</h2><p>Esta funcionalidad aún no está implementada.</p>';
+        modal.innerHTML = '<h2>Not implemented yet!</h2><p>This functionality is not implemented yet.</p>';
         const closeBtn = document.createElement('button');
         closeBtn.textContent = 'Cerrar';
         closeBtn.addEventListener('click', () => backdrop.remove());
