--- a/app/front/manager/cancel_reservation_confirmation.html
+++ b/app/front/manager/cancel_reservation_confirmation.html
@@ -6,7 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
   <title>Confirm Cancellation - Cheesy Dreams</title>
   <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700&amp;display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700&amp;display=swap"
+    rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
   <script>
     tailwind.config = {
@@ -37,57 +38,60 @@
   <div
     class="relative flex h-screen min-h-screen w-full flex-col bg-background-light dark:bg-background-dark group/design-root overflow-hidden">
     <div class="flex h-full w-full">
-      <aside class="flex w-64 flex-col bg-white dark:bg-[#181611] border-r border-gray-200 dark:border-gray-800">
-        <div class="flex h-20 items-center px-6">
-          <div class="flex items-center gap-3">
-            <div class="flex h-10 w-10 items-center justify-center rounded-lg bg-primary">
-              <span class="text-2xl font-bold text-gray-900">CD</span>
+      
+      <!-- INICIO: Panel Lateral Unificado (Mismo estilo que Management System) -->
+      <aside
+        class="flex h-screen w-64 flex-col bg-white dark:bg-gray-900 p-4 sticky top-0 border-r border-gray-200 dark:border-gray-700">
+        <div class="flex flex-col gap-4">
+          <div class="flex items-center gap-3 px-3 py-2">
+            <div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-10"
+              data-alt="Cheesy Dreams logo"
+              style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuACWG7apcDQDYvNEqsji_QXxNXAAHmsavK3M2grSSmAsuCbB8QH6m8V97WY1Qo3PkFnSbd4ZdQ8omPhJNiTkN0T_Yj36jbtKZrNrmx2BAlUzJLMIOSZlvulEkHxiVK46Dz8kxMoiR5y3X-GdmFlLRh2h3nWCNPi7FlMCz3jMmbHSASdtzuykd7r0YKMrMuZJRx43-0rS5JIhKA1NGR2PUOnktpFXcC1z7I4DpPGQJhwT8fu84IMlKksjcm2qsGLxbL7iAgq-m-P4WI");'>
             </div>
-            <span class="text-xl font-bold text-gray-900 dark:text-white">Cheesy Dreams</span>
+            <div class="flex flex-col">
+              <h1 class="text-gray-900 dark:text-white text-base font-medium leading-normal">Cheesy Dreams</h1>
+              <p class="text-gray-500 dark:text-gray-400 text-sm font-normal leading-normal">Management System</p>
+            </div>
           </div>
-        </div>
-        <nav class="flex-1 space-y-2 px-4 py-4">
-          <a class="flex items-center gap-3 rounded-lg px-3 py-2 text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-white/10"
-            href="#">
-            <span class="material-symbols-outlined">dashboard</span>
-            <span class="font-medium">Dashboard</span>
-          </a>
-          <a class="flex items-center gap-3 rounded-lg bg-primary/20 px-3 py-2 font-bold text-primary dark:bg-primary/30"
-            href="#">
-            <span class="material-symbols-outlined">book_online</span>
-            <span class="font-medium">Reservations</span>
-          </a>
-          <a class="flex items-center gap-3 rounded-lg px-3 py-2 text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-white/10"
-            href="#">
-            <span class="material-symbols-outlined">calendar_month</span>
-            <span class="font-medium">Calendar</span>
-          </a>
-          <a class="flex items-center gap-3 rounded-lg px-3 py-2 text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-white/10"
-            href="#">
-            <span class="material-symbols-outlined">restaurant_menu</span>
-            <span class="font-medium">Menu</span>
-          </a>
-        </nav>
-        <div class="mt-auto px-4 py-4">
-          <nav class="flex-col space-y-2">
-            <a class="flex items-center gap-3 rounded-lg px-3 py-2 text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-white/10"
-              href="#">
-              <span class="material-symbols-outlined">settings</span>
-              <span class="font-medium">Settings</span>
+          <nav class="flex flex-col gap-2 mt-4">
+            <a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors"
+              href="/manager/dashboard">
+              <span class="material-symbols-outlined">dashboard</span>
+              <p class="text-sm font-medium leading-normal">Dashboard</p>
             </a>
-            <a class="flex items-center gap-3 rounded-lg px-3 py-2 text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-white/10"
-              href="#">
-              <span class="material-symbols-outlined">help</span>
-              <span class="font-medium">Help</span>
+            <!-- Mantenemos 'Reservations' activo porque estamos en un flujo de reserva -->
+            <a class="flex items-center gap-3 px-3 py-2 rounded-lg bg-primary text-gray-900"
+              href="/manager/manage_reservations">
+              <span class="material-symbols-outlined">book_online</span>
+              <p class="text-sm font-medium leading-normal">Reservations</p>
             </a>
-            <a class="flex items-center gap-3 rounded-lg px-3 py-2 text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-white/10"
-              href="/logout">
-              <span class="material-symbols-outlined">logout</span>
-              <span class="font-medium">Logout</span>
+            <a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors"
+              href="/manager/inventory">
+              <span class="material-symbols-outlined">inventory_2</span>
+              <p class="text-sm font-medium leading-normal">Inventory</p>
+            </a>
+            <a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors"
+              href="/manager/sales">
+              <span class="material-symbols-outlined">assessment</span>
+              <p class="text-sm font-medium leading-normal">Sales Reports</p>
             </a>
           </nav>
         </div>
+        <div class="mt-auto flex flex-col gap-2">
+          <a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors"
+            href="#" data-not-implemented>
+            <span class="material-symbols-outlined">settings</span>
+            <p class="text-sm font-medium leading-normal">Settings</p>
+          </a>
+          <a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors"
+            href="../logout">
+            <span class="material-symbols-outlined">logout</span>
+            <p class="text-sm font-medium leading-normal">Log Out</p>
+          </a>
+        </div>
       </aside>
+      <!-- FIN: Panel Lateral Unificado -->
+
       <main class="flex-1 p-8">
         <h1 class="text-3xl font-bold text-gray-800 dark:text-gray-200">Reservation Management</h1>
         <div class="mt-4 p-4 border border-gray-200 dark:border-gray-700 rounded-lg bg-white dark:bg-gray-800/50">
@@ -146,6 +150,7 @@
             </button>
           </a>
           <a href="/manager/manage_reservations" class="w-full sm:w-1/2">
+            <!-- Botón mantenido en rojo como se solicitó -->
             <button
               class="flex w-full min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-5 bg-red-600 text-white text-base font-bold leading-normal tracking-[0.015em] hover:bg-red-700 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-red-500 focus-visible:ring-offset-2 dark:focus-visible:ring-offset-background-dark">
               <span class="truncate">Yes, Cancel Reservation</span>
