--- a/app/front/staff/today_task.html
+++ b/app/front/staff/today_task.html
@@ -178,9 +178,9 @@
       </div>
       <div class="mt-auto flex flex-col gap-2">
         <a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors"
-          href="#">
+          href="#" data-not-implemented="">
           <span class="material-symbols-outlined">help</span>
-          <p data-not-implemented class="text-sm font-medium leading-normal">Help</p>
+          <p class="text-sm font-medium leading-normal">Help</p>
         </a>
         <a class="flex items-center gap-3 px-3 py-2 text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg transition-colors"
           href="/logout">
@@ -208,14 +208,14 @@
             <a class="group flex cursor-pointer items-center justify-between rounded-lg border border-black/10 bg-white p-4 text-[#181611] transition-colors hover:border-primary hover:bg-primary/10 dark:border-white/10 dark:bg-black/20 dark:text-white dark:hover:border-primary dark:hover:bg-primary/20"
               href="/staff/pizza1">
               <div class="flex-grow">
-                <span class="text-lg font-medium">Prepare Pizza Dough</span>
+                <span class="text-lg font-medium">Prepare Pizza</span>
                 <p class="text-sm text-gray-500 dark:text-gray-400">Mix, knead, and portion dough for the day.</p>
               </div>
               <span
                 class="material-symbols-outlined text-gray-500 transition-transform group-hover:translate-x-1 dark:text-gray-400">arrow_forward</span>
             </a>
             <a class="group flex cursor-pointer items-center justify-between rounded-lg border border-black/10 bg-white p-4 text-[#181611] transition-colors hover:border-primary hover:bg-primary/10 dark:border-white/10 dark:bg-black/20 dark:text-white dark:hover:border-primary dark:hover:bg-primary/20"
-              href="#">
+              href="#" data-not-implemented>
               <div class="flex-grow">
                 <span class="text-lg font-medium">Chop Vegetables</span>
                 <p class="text-sm text-gray-500 dark:text-gray-400">Dice onions, slice peppers, and chop mushrooms.</p>
@@ -224,7 +224,7 @@
                 class="material-symbols-outlined text-gray-500 transition-transform group-hover:translate-x-1 dark:text-gray-400">arrow_forward</span>
             </a>
             <a class="group flex cursor-pointer items-center justify-between rounded-lg border border-black/10 bg-white p-4 text-[#181611] transition-colors hover:border-primary hover:bg-primary/10 dark:border-white/10 dark:bg-black/20 dark:text-white dark:hover:border-primary dark:hover:bg-primary/20"
-              href="#">
+              href="#" data-not-implemented>
               <div class="flex-grow">
                 <span class="text-lg font-medium">Clean Kitchen Surfaces</span>
                 <p class="text-sm text-gray-500 dark:text-gray-400">Wipe down all stainless steel counters.</p>
@@ -233,7 +233,7 @@
                 class="material-symbols-outlined text-gray-500 transition-transform group-hover:translate-x-1 dark:text-gray-400">arrow_forward</span>
             </a>
             <a class="group flex cursor-pointer items-center justify-between rounded-lg border border-black/10 bg-white p-4 text-[#181611] transition-colors hover:border-primary hover:bg-primary/10 dark:border-white/10 dark:bg-black/20 dark:text-white dark:hover:border-primary dark:hover:bg-primary/20"
-              href="#">
+              href="#" data-not-implemented>
               <div class="flex-grow">
                 <span class="text-lg font-medium">Set Up Dining Area</span>
                 <p class="text-sm text-gray-500 dark:text-gray-400">Arrange tables, chairs, and set cutlery.</p>
@@ -242,7 +242,7 @@
                 class="material-symbols-outlined text-gray-500 transition-transform group-hover:translate-x-1 dark:text-gray-400">arrow_forward</span>
             </a>
             <a class="group flex cursor-pointer items-center justify-between rounded-lg border border-black/10 bg-white p-4 text-[#181611] transition-colors hover:border-primary hover:bg-primary/10 dark:border-white/10 dark:bg-black/20 dark:text-white dark:hover:border-primary dark:hover:bg-primary/20"
-              href="#">
+              href="#" data-not-implemented>
               <div class="flex-grow">
                 <span class="text-lg font-medium">Restock Condiments</span>
                 <p class="text-sm text-gray-500 dark:text-gray-400">Refill salt, pepper, and parmesan shakers.</p>
@@ -250,18 +250,6 @@
               <span
                 class="material-symbols-outlined text-gray-500 transition-transform group-hover:translate-x-1 dark:text-gray-400">arrow_forward</span>
             </a>
-            <a class="group flex cursor-pointer items-center justify-between rounded-lg border border-black/10 bg-white p-4 text-[#181611] transition-colors hover:border-primary hover:bg-primary/10 dark:border-white/10 dark:bg-black/20 dark:text-white dark:hover:border-primary dark:hover:bg-primary/20"
-              href="#">
-              <div class="flex-grow">
-                <span class="text-lg font-medium">Prepare Pizza</span>
-                <p class="text-sm text-gray-500 dark:text-gray-400">Assemble ingredients for Margherita and Pepperoni
-                  pizzas.</p>
-              </div>
-              <span
-                class="material-symbols-outlined text-gray-500 transition-transform group-hover:translate-x-1 dark:text-gray-400">arrow_forward</span>
-            </a>
-
-
           </div>
         </div>
       </main>
