--- a/app/front/manager/cancel_reservation_confirmation.html
+++ b/app/front/manager/cancel_reservation_confirmation.html
@@ -6,8 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
   <title>Confirm Cancellation - Cheesy Dreams</title>
   <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700&amp;display=swap"
-    rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700&amp;display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
   <script>
     tailwind.config = {
@@ -38,7 +37,7 @@
   <div
     class="relative flex h-screen min-h-screen w-full flex-col bg-background-light dark:bg-background-dark group/design-root overflow-hidden">
     <div class="flex h-full w-full">
-      
+
       <!-- INICIO: Panel Lateral Unificado (Mismo estilo que Management System) -->
       <aside
         class="flex h-screen w-64 flex-col bg-white dark:bg-gray-900 p-4 sticky top-0 border-r border-gray-200 dark:border-gray-700">
@@ -104,7 +103,8 @@
         class="relative m-4 flex w-full max-w-lg flex-col rounded-xl bg-white dark:bg-[#181611] shadow-2xl"
         role="alertdialog">
         <button
-          class="absolute top-4 right-4 flex h-8 w-8 items-center justify-center rounded-full text-gray-600 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-white/10 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-2 dark:focus-visible:ring-offset-background-dark">
+          class="absolute top-4 right-4 flex h-8 w-8 items-center justify-center rounded-full text-gray-600 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-white/10 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-2 dark:focus-visible:ring-offset-background-dark"
+          onclick="window.history.back()">
           <span aria-hidden="true" class="material-symbols-outlined text-2xl">close</span>
           <span class="sr-only">Close</span>
         </button>
