Add more js functionalities into a js file

--- a/app/front/manager/revised_dashboard_overview.html
+++ b/app/front/manager/revised_dashboard_overview.html
@@ -312,6 +312,7 @@
       console.log('✅ Event listener configurado');
     })();
   </script>
+  <script src="../js/functions.js"></script>
 </body>
 
 </html>
