--- a/app/front/manager/sales_reports_page.html
+++ b/app/front/manager/sales_reports_page.html
@@ -263,6 +263,7 @@
       console.log('✅ Event listener configurado');
     })();
   </script>
+  <script src="../js/functions.js"></script>
 </body>
 
 </html>
