--- a/app/front/staff/live_orders.html
+++ b/app/front/staff/live_orders.html
@@ -718,6 +718,7 @@
       }
     })();
   </script>
+  <script src="../js/functions.js">  <script src="../js/functions.js"></script>
 </body>
 
 </html>
