--- a/app/front/staff/pizza2.html
+++ b/app/front/staff/pizza2.html
@@ -514,6 +514,7 @@
       }
     })();
   </script>
+  <script src="../js/functions.js">  <script src="../js/functions.js"></script>
 </body>
 
 </html>
