--- a/app/front/staff/pizza4.html
+++ b/app/front/staff/pizza4.html
@@ -519,6 +519,7 @@
       }
     })();
   </script>
+  <script src="../js/functions.js">  <script src="../js/functions.js"></script>
 </body>
 
 </html>
