--- a/app/front/manager/inventory_management_module.html
+++ b/app/front/manager/inventory_management_module.html
@@ -384,6 +384,7 @@
       console.log('✅ Event listener configurado');
     })();
   </script>
+  <script src="../js/functions.js"></script>
 </body>
 
 </html>
