--- a/app/front/manager/reservation_management.html
+++ b/app/front/manager/reservation_management.html
@@ -299,6 +299,7 @@
         console.log('✅ Event listener configurado');
       })();
     </script>
+  <script src="../js/functions.js"></script>
 </body>
 
 </html>
