--- a/app/front/staff/reservations_staff.html
+++ b/app/front/staff/reservations_staff.html
@@ -693,6 +693,7 @@
       }
     })();
   </script>
+  <script src="../js/functions.js">  <script src="../js/functions.js"></script>
 </body>
 
 </html>
